# name: TestFind.test[uvloop-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'subtraction',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
      },
    ],
  }
---
# name: TestFind.test[uvloop-reads]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
  }
---
# name: TestFind.test[uvloop-reference]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
  }
---
# name: TestFind.test_ready[uvloop-False]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'subtraction',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
      },
    ],
  }
---
# name: TestFind.test_ready[uvloop-None]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 1,
        'name': 'test.fq.gz',
        'name_on_disk': '1-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reads',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 3,
        'name': 'test.fq.gz',
        'name_on_disk': '3-Test.fq.gz',
        'ready': False,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'subtraction',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'zclark',
          'id': 'fb085f7f',
        },
      },
    ],
  }
---
# name: TestFind.test_ready[uvloop-True]
  <class 'dict'> {
    'documents': <class 'list'> [
      <class 'dict'> {
        'created_at': '2015-10-06T20:00:00Z',
        'id': 2,
        'name': 'test.fq.gz',
        'name_on_disk': '2-Test.fq.gz',
        'ready': True,
        'removed': False,
        'removed_at': None,
        'reserved': False,
        'size': 9081,
        'type': 'reference',
        'uploaded_at': '2015-10-06T20:00:00Z',
        'user': <class 'dict'> {
          'administrator': False,
          'b2c': None,
          'b2c_display_name': None,
          'b2c_family_name': None,
          'b2c_given_name': None,
          'b2c_oid': None,
          'handle': 'leeashley',
          'id': 'bf1b993c',
        },
      },
    ],
  }
---
# name: TestUpload.test[uvloop-hmm]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'hmm',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'b2c': None,
      'b2c_display_name': None,
      'b2c_family_name': None,
      'b2c_given_name': None,
      'b2c_oid': None,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-reads]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reads',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'b2c': None,
      'b2c_display_name': None,
      'b2c_family_name': None,
      'b2c_given_name': None,
      'b2c_oid': None,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-reference]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'reference',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'b2c': None,
      'b2c_display_name': None,
      'b2c_family_name': None,
      'b2c_given_name': None,
      'b2c_oid': None,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
# name: TestUpload.test[uvloop-subtraction]
  <class 'dict'> {
    'created_at': '2015-10-06T20:00:00Z',
    'id': 1,
    'name': 'Test.fq.gz',
    'name_on_disk': '1-Test.fq.gz',
    'ready': True,
    'removed': False,
    'removed_at': None,
    'reserved': False,
    'size': 9081,
    'type': 'subtraction',
    'uploaded_at': '2015-10-06T20:00:00Z',
    'user': <class 'dict'> {
      'administrator': False,
      'b2c': None,
      'b2c_display_name': None,
      'b2c_family_name': None,
      'b2c_given_name': None,
      'b2c_oid': None,
      'handle': 'bob',
      'id': 'test',
    },
  }
---
